fix: overflow: hidden not working in safari on progress bar (#818)

--- a/packages/ui/src/theme/css/component/liveness.scss
+++ b/packages/ui/src/theme/css/component/liveness.scss
@@ -163,6 +163,10 @@
   background: var(--amplify-colors-white);
   position: relative;
   overflow: hidden;
+  /* 
+    This translateZ transform fixes in issue in Safari where the bar::after
+    element doesn't appear clipped from overflow: hidden here */
+  transform: translateZ(0);
   border: 1px solid var(--amplify-colors-border-tertiary);
 }
 
